--- a/shop-list.html
+++ b/shop-list.html
@@ -94,6 +94,7 @@
       flex-direction: column;
       align-items: center;
       color: white;  /* Text color for visibility */
+      margin-left: -0.5mm;  /* Move cards left by 0.5mm */
       /* Removed transform and will-change to prevent flickering */
     }
 
@@ -149,6 +150,7 @@
         min-width: 200px;
         max-width: none;  /* Allow full width on mobile */
         border-radius: 14px;
+        margin-left: -0.5mm;  /* Move cards left by 0.5mm on mobile */
       }
       .shop-card img {
         height: 150px;  /* Fixed height to prevent layout shifts */
@@ -172,6 +174,7 @@
       .shop-card {
         flex: 1 1 100%;  /* Full width on very small screens */
         margin: 0;
+        margin-left: 0;  /* No shift needed for full width */
       }
       .shop-card img {
         height: 120px;  /* Smaller fixed height */
