--- a/summary.html
+++ b/summary.html
@@ -19,11 +19,7 @@
       position: fixed;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
-      background-image: url('https://www.nottingham.edu.my/events/images-multimedia/25th-anniversary/banner-homepage-25th-anniversary.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      filter: blur(6px) brightness(0.7);
+      background: white;  /* Changed to white like shop-list.html and menu.html */
       z-index: -1;
     }
     #summary-container {
