--- a/student-home.html
+++ b/student-home.html
@@ -15,16 +15,14 @@
       min-height: 100vh;
       box-sizing: border-box;
       background: transparent;
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch;
     }
     .background {
       position: fixed;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
-      background-image: url('https://www.nottingham.edu.my/events/images-multimedia/25th-anniversary/banner-homepage-25th-anniversary.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      filter: blur(6px) brightness(0.7);
+      background: white;  /* Changed to white for consistency with other pages */
       z-index: -1;
     }
     body {
@@ -34,9 +32,9 @@
       justify-content: center;
     }
     .container {
-      background: rgba(255,255,255,0.90);
+      background: rgba(255,255,255,0.95);
       border-radius: 18px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);  /* Enhanced shadow for depth */
       padding: 36px 24px 28px 24px;
       max-width: 370px;
       width: 100%;
@@ -44,27 +42,32 @@
       margin: 0;
       position: relative;
       z-index: 1;
+      border: 2px solid #40E0D0;  /* Turquoise border for theme consistency */
     }
     .avatar {
       width: 70px;
       height: 70px;
       border-radius: 50%;
-      background: #e3eafc;
+      background: linear-gradient(135deg, #005f73, #00aaff);  /* Gradient background */
       display: flex;
       align-items: center;
       justify-content: center;
       margin: 0 auto 16px auto;
       font-size: 2.2rem;
-      color: #005f73;
+      color: white;
       font-weight: bold;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
     }
     h1 {
       margin: 0 0 10px 0;
       font-size: 1.7rem;
       font-weight: 700;
-      color: #005f73;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.04);
+      background: linear-gradient(90deg, black, #005f73);  /* Black to dark turquoise gradient */
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;  /* Transparent to show gradient */
+      letter-spacing: 0.5px;
+      text-shadow: none;  /* Removed for gradient effect */
     }
     .info {
       margin: 16px 0;
@@ -72,14 +75,15 @@
       color: #444;
     }
     .points {
-      background: #f1f8e9;
-      color: #388e3c;
+      background: linear-gradient(90deg, #388e3c, #66bb6a);  /* Green gradient */
+      color: white;
       display: inline-block;
       padding: 7px 16px;
       border-radius: 20px;
       font-weight: 700;
       margin-bottom: 18px;
       font-size: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .actions {
       margin-top: 22px;
@@ -96,13 +100,49 @@
       font-size: 1.08em;
       font-weight: 600;
       cursor: pointer;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
       transition: background 0.2s, transform 0.2s;
       letter-spacing: 0.5px;
+      position: relative;
     }
     .actions button:hover {
       background: linear-gradient(90deg, #0099cc 60%, #005f73 100%);
       transform: scale(0.98);
+    }
+    .actions button.shop-list {
+      border-radius: 50%;  /* Circular icon button */
+      width: 120px;  /* Larger width to fit content */
+      height: 120px;  /* Larger height to fit content */
+      padding: 0;  /* Remove padding */
+      font-size: 2rem;  /* Larger icon */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;  /* Center the button */
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3);  /* Deeper shadow for fancy look */
+    }
+    .actions button.shop-list::before {
+      content: "🛒";  /* Shopping cart icon */
+      font-size: 2.5rem;  /* Icon size */
+      margin-bottom: 4px;  /* Space between icon and text */
+    }
+    .actions button.shop-list span {
+      font-size: 0.7rem;  /* Smaller text */
+      font-weight: 600;
+      color: white;  /* Changed to white */
+      text-align: center;
+      line-height: 1.2;
+    }
+    .actions button.shop-list:hover {
+      background: linear-gradient(90deg, #0099cc 60%, #005f73 100%);
+      transform: scale(1.05);  /* Slight scale up on hover */
+    }
+    .actions button.logout {
+      background: linear-gradient(90deg, #dc3545 60%, #ff6f6f 100%);  /* Red gradient for logout */
+    }
+    .actions button.logout:hover {
+      background: linear-gradient(90deg, #b71c1c 60%, #dc3545 100%);
     }
     @media (max-width: 500px) {
       .container {
@@ -125,6 +165,17 @@
         font-size: 1em;
         padding: 12px 0;
       }
+      .actions button.shop-list {
+        width: 100px;
+        height: 100px;
+        font-size: 1.8rem;
+      }
+      .actions button.shop-list::before {
+        font-size: 2rem;
+      }
+      .actions button.shop-list span {
+        font-size: 0.6rem;
+      }
     }
   </style>
   <script type="module">
@@ -134,11 +185,11 @@
 
     const firebaseConfig = {
       apiKey: "AIzaSyBQZrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
-      authDomain: "unm-caf-orders.firebaseapp.com",
+      authDomain: "unm-caf-orders.firebaseapp.com",  // Corrected from firebasestorage.app
       projectId: "unm-caf-orders",
-      storageBucket: "unm-caf-orders.firebasestorage.app",
+      storageBucket: "unm-caf-orders.appspot.com",
       messagingSenderId: "562096834985",
-      appId: "1:562096834985:web:f4fbe451e5482521e49cb8",
+      appId: "1:562096834985:web:f4bfe451e5482521e49cb8",
       measurementId: "G-J12PBDK7N1"
     };
 
@@ -177,7 +228,7 @@
   <div class="background"></div>
   <div class="container">
     <div class="avatar" id="avatar">U</div>
-    <h1>Welcome Back!</h1>
+    <h1>Welcome!</h1>
     <div class="info">
       <strong>Email:</strong> <span id="user-email">Loading...</span>
     </div>
@@ -185,8 +236,8 @@
       Points: <span id="points">Loading...</span>
     </div>
     <div class="actions">
-      <button onclick="goToShopList()">Go to Shop List</button>
-      <button onclick="logout()">Logout</button>
+      <button class="shop-list" onclick="goToShopList()" title="Go to Shop List"><span>Shop List</span></button>
+      <button class="logout" onclick="logout()">Logout</button>
     </div>
   </div>
 </body>
